# maestro_ngs_rust

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md
instructions/: Cargo.toml
instructions/src/: lib.rs
maestro_application/: Cargo.toml
maestro_application/resources/test/: Application_Empty.eap  Applications_Empty.eap
maestro_application/src/: lib.rs
maestro_emulator/: Cargo.toml
maestro_emulator/resources/test/: Application_Complex.eap  Pipette_and_Mix.eap
maestro_emulator/src/: lib.rs  machine.rs
maestro_ngs_application/: Cargo.toml
maestro_ngs_application/src/: lib.rs
maestro_ngs_emulator/: Cargo.toml
maestro_ngs_emulator/src/: lib.rs  machine.rs
maestro_ngs_explorer/: Cargo.toml
maestro_ngs_explorer/src/: main.rs
