[package]
name = "maestro_ngs_emulator"
version = "0.1.0"
authors = ["Savo Lazic <savo.lazic@oicr.on.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# roxmltree = "0.14.1"
uuid = "0.8.2"
maestro_ngs_application = { path = "../maestro_ngs_application" }