[package]
name = "maestro_ngs_explorer"
version = "0.1.0"
authors = ["Savo Lazic <savo.lazic@oicr.on.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = "0.5.0-rc.1"
maestro_ngs_application = { path = "../maestro_ngs_application" }
maestro_ngs_emulator = { path = "../maestro_ngs_emulator" }